k3s/k3s-prod/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-grafana
spec:
  selector:
    matchLabels:
      app: grafana
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
    spec:
      nodeName: ip-172-31-39-249
      containers:
        - name: grafana
          image: grafana/grafana:5.3.4
          ports:
            - containerPort: 3000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: monitoring-grafana
  labels:
    app: grafana
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: grafana
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-grafana
spec:
  rules:
    - host: ec2-161-189-129-94.cn-northwest-1.compute.amazonaws.com.cn
      http:
        paths:
          - backend:
              serviceName: monitoring-grafana
              servicePort: http
