k3s/k3s-prod/influxdb.yaml
# test sql: insert test,host=127.0.0.1,monitor_name=test count=1
# test cli: curl -X POST "http://host:8086/write?db=mydb&u=admin&p=cx123456" --data-binary "test,host=server01,region=us-west count=2"
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-influxdb
spec:
  selector:
    matchLabels:
      app: influxdb
  replicas: 1
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      nodeName: ip-172-31-47-101
      volumes:
        - name: influxdb
          hostPath:
            path: /mnt/influxdb
            type: DirectoryOrCreate
      containers:
        - name: influxdb
          image: influxdb:1.8.3
          volumeMounts:
            - mountPath: /var/lib/influxdb
              name: influxdb
          ports:
            - containerPort: 8086
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: monitoring-influxdb
  labels:
    app: influxdb
spec:
  ports:
    - port: 8086
      targetPort: 8086
  selector:
    app: influxdb
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-influxdb
spec:
  rules:
    - host: ec2-161-189-129-94.cn-northwest-1.compute.amazonaws.com.cn
      http:
        paths:
        - path: /write,/query
          backend:
            serviceName: monitoring-influxdb
            servicePort: 8086
